src/test/compile-fail/borrowck-issue-2657-2.rs
fn main() {
let x = some(~1);
alt x {
  some(y) {
    let _b <- y; //! ERROR moving out of pattern binding
  }
  _ {}
}
}
